# ros2rokae

./: .gitignore  colcon_defaults.yaml
src/rokae_xmate3_ros2/: CHATGPT_REWRITE_SUMMARY.md  CMakeLists.txt  README.md  REWRITE_PASS10_SUMMARY.md  REWRITE_PASS2_SUMMARY.md  REWRITE_PASS3_SUMMARY.md  REWRITE_PASS4_SUMMARY.md  REWRITE_PASS5_SUMMARY.md  REWRITE_PASS6_SUMMARY.md  REWRITE_PASS7_SUMMARY.md  REWRITE_PASS8_SUMMARY.md  REWRITE_PASS9_SUMMARY.md  REWRITE_SUMMARY.md  issue_resolution_report_xmate6.md  meshes  model.config  package.xml
src/rokae_xmate3_ros2/.github/workflows/: acceptance-humble-gazebo11.yml  gates.yml
src/rokae_xmate3_ros2/action/: Jog.action  MoveAppend.action  ReplayPath.action
src/rokae_xmate3_ros2/build_check/: CMakeCache.txt
src/rokae_xmate3_ros2/cmake/: assemble_sdk_artifact.py  compile_slot.sh  create_verified_source_archive.py  rokae_test_utils.cmake  targets_examples.cmake  targets_packaging.cmake  targets_plugin.cmake  targets_runtime.cmake  targets_sdk.cmake  targets_sdk_backend.cmake  targets_sdk_compat.cmake  targets_tests.cmake  verify_source_archive.py  xCoreSDKConfig.cmake.in
src/rokae_xmate3_ros2/config/: moveit_chomp_planning.yaml  ros2_control.yaml  ros2_control_nrt.yaml  ros2_control_rt.yaml  runtime_diag_gate.default.json  xMate3.rviz  xMate3_moveit.rviz
src/rokae_xmate3_ros2/config/moveit/: controllers.yaml  fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  sensors_3d.yaml  servo.yaml  stomp_planning.yaml  xMate3.srdf
src/rokae_xmate3_ros2/docker/: Dockerfile.humble-gazebo11
src/rokae_xmate3_ros2/docs/: API_ALIGNMENT_MATRIX.md  ARCHITECTURE.md  BUILD_RELEASE.md  COMPATIBILITY.md  COMPAT_ABI.md  ENVIRONMENT_LOCK.md  EXAMPLES.md  EXTENSION_FRAMEWORK.md  FIDELITY_POLICY.md  FIX_SUMMARY_2026-03-17.md  HARDENING_BACKLOG.md  IMPLEMENTATION_AUDIT.md  INDEX.md  KINEMATICS_AND_MODEL.md  KINEMATICS_POLICY.md  MODEL_TRACEABILITY.md  MOVEIT2_GUIDE.md  P0_1_DEEP_REVIEW_REPORT.md  P0_1_IMPLEMENTATION_SUMMARY.md  P0_1_ISSUE_REMEDIATION_SUMMARY.md  P0_1_SECOND_REFINEMENT_SUMMARY.md  PROFILE_CAPABILITY_MATRIX.md  PROFILE_QUERY_POLICY.md  PUBLIC_SDK_ARTIFACT.md  QUICKSTART.md  RT_HARDENING_PROFILE.md  RT_PROFILE_GUIDE.md  RUNTIME_CATALOG_POLICY.md  RUNTIME_PROFILES.md  SDK_AUDIT_2026-03-15.md  SDK_COMPATIBILITY.md  SDK_METHOD_MATRIX.md  STRUCTURE.md  XMATE6_OFFICIAL_ALIGNMENT_MATRIX.md  xmate6_official_alignment_manifest.json
src/rokae_xmate3_ros2/docs/maintenance/: HARDENING_BACKLOG.md
src/rokae_xmate3_ros2/examples/: PUBLIC_SDK_README.md  README.md  print_helper.hpp
src/rokae_xmate3_ros2/examples/cpp/: 01_basic_connect.cpp  02_joint_cartesian_read.cpp  03_kinematics.cpp  04_motion_basic.cpp  05_motion_cartesian.cpp  06_io_control.cpp  07_safety_collision.cpp  08_path_record_replay.cpp  09_advanced_sdk_compat.cpp  10_official_sdk_connect.cpp  10_sdk_workflow_xmate3.cpp  11_move_advanced_xmate3.cpp  11_official_sdk_motion.cpp  12_official_sdk_register_rl.cpp  12_state_stream_threaded.cpp  13_official_sdk_rt_model.cpp  13_rl_project_workflow.cpp  14_model_extended.cpp  15_move_queue_and_events.cpp  16_registers_and_runtime_options.cpp  17_state_stream_cache.cpp  18_toolset_and_calibration.cpp  18_toolset_only.cpp  19_diagnostics_and_wrench.cpp  20_rt_joint_position.cpp  21_rt_move_commands.cpp  22_rt_joint_impedance.cpp  23_rt_cartesian_impedance.cpp  24_rt_follow_position.cpp  25_rt_s_line.cpp  26_rt_torque_control.cpp  27_rt_1khz_stress.cpp  99_complete_demo.cpp  CMakeLists.txt.inc  example_common.hpp  print_helper.hpp
src/rokae_xmate3_ros2/include/rokae/: base.h  data_types.h  error_category.hpp  exception.h  model.h  (+12 more)
src/rokae_xmate3_ros2/launch/: _launch_profile.py  _simulation_support.py  rviz_only.launch.py  simulation.launch.py  xmate3_gazebo.launch.py  xmate3_simulation.launch.py  xmate6_public.launch.py
src/rokae_xmate3_ros2/msg/: CartesianPosition.msg  Info.msg  JointPos6.msg  JointPosition.msg  LogInfo.msg  MoveAbsJCommand.msg  MoveCCommand.msg  MoveCFCommand.msg  MoveLCommand.msg  MoveSPCommand.msg  OperateMode.msg  OperationState.msg  PowerState.msg  RtFastCommand.msg  RuntimeDiagnostics.msg  Toolset.msg
src/rokae_xmate3_ros2/src/: robot.cpp
src/rokae_xmate3_ros2/srv/: AdjustSpeedOnline.srv  CalcFk.srv  CalcIk.srv  CalcJointTorque.srv  Connect.srv  Disconnect.srv  EnableCollisionDetection.srv  EnableDrag.srv  GenerateSTrajectory.srv  GetAI.srv  GetAvoidSingularity.srv  GetBaseFrame.srv  GetCartPosture.srv  GetDO.srv  GetEndEffectorTorque.srv  GetEndTorque.srv  GetEndWrench.srv  GetInfo.srv  GetJointPos.srv  GetJointTorques.srv  GetJointVel.srv  GetLogInfo.srv  GetOperateMode.srv  GetPosture.srv  GetPowerState.srv  GetProfileCapabilities.srv  GetRlProjectInfo.srv  GetRobotInfo.srv  GetRtJointData.srv  GetRuntimeDiagnostics.srv  GetRuntimeStateSnapshot.srv  GetSoftLimit.srv  GetToolCatalog.srv  GetToolset.srv  GetWobjCatalog.srv  LoadRLProject.srv  MapCartesianToJointTorque.srv  PauseRLProject.srv  PrepareShutdown.srv  QueryControllerLog.srv  (+35 more)
src/rokae_xmate3_ros2/test/: gazebo_alias_smoke_runner.py  gazebo_examples_smoke_runner.py  gazebo_sdk_regression_helper.cpp  test_controller_state.cpp  test_motion_planner_core.cpp  test_motion_runtime_state.cpp  test_request_coordinator.cpp  test_runtime_adapters.cpp  test_runtime_control_bridge.cpp  test_runtime_publish_bridge.cpp  test_runtime_state.cpp  test_service_facade.cpp
src/rokae_xmate3_ros2/tools/: check_runtime_diag_gate.py  check_target_environment.sh  clean_build_env.sh  derive_runtime_diag_gate.py  generate_description_metadata.py  render_robot_description.py  run_launch_smoke.sh  run_main_chain_smoke.sh  run_quick_gate.sh  run_release_gate.sh  run_release_gate_portable.sh  run_rt_1khz_stress.sh  run_static_sanity.sh  run_target_env_acceptance.sh  write_target_env_report.py
src/rokae_xmate3_ros2/urdf/: xMate3.ros2_control.xacro  xMate3.urdf  xMate3.xacro
src/rokae_xmate3_ros2/worlds/: empty.world  rt_1khz.world
(+244 files in other folders)
